# ESP32S3_1.28_LVGL_GUI

./: .gitignore
Arduino/Smart_Watch/: CMakeLists.txt  Smart_Watch.ino  Smart_Watch.sln  Smart_Watch.vcxproj  Smart_Watch.vcxproj.filters  SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  project.info  ui.h  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen5.c  ui_Screen5.h  ui_Screen6.c  ui_Screen6.h  ui_Screen7.c  ui_Screen7.h  ui_Screen8.c  ui_comp_home.c  ui_img_arrow_forward_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  ui_img_light_mode_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  wifi_connect.cpp  wifi_connect.hpp
Arduino/Smart_Watch/__vm/: .Smart_Watch.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml  Upload.vmps.xml
Arduino/Smart_Watch/components/: Home.ecomp  ui_comp_hook.c
Platformio/esp32s3_waveshare_first_project/: CMakeLists.txt  Smartwatch.sll  Smartwatch.slp  Smartwatch.spj  esp32s3_waveshare_first_project.ino  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Platformio/esp32s3_waveshare_first_project/components/: ui_comp.c  ui_comp.h  ui_comp_batterygroup.c  ui_comp_batterygroup.h  ui_comp_buttondown.c  ui_comp_buttondown.h  ui_comp_buttonround.c  ui_comp_buttonround.h  ui_comp_buttontop.c  ui_comp_buttontop.h  ui_comp_dailymissiongroup.c  ui_comp_dailymissiongroup.h  ui_comp_dategroup.c  ui_comp_dategroup.h  ui_comp_forecastgroup.c  ui_comp_forecastgroup.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_pulsegroup.c  ui_comp_pulsegroup.h  ui_comp_stepgroup.c  ui_comp_stepgroup.h  ui_comp_titlegroup.c  ui_comp_titlegroup.h  ui_comp_todayweathergroup.c  ui_comp_todayweathergroup.h  ui_comp_weathergroup1.c  ui_comp_weathergroup1.h
Platformio/esp32s3_waveshare_first_project/images/: ui_img_bg1_png.c  ui_img_btn_bg_1_png.c  ui_img_btn_bg_3_png.c  ui_img_call1_png.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_min_png.c  ui_img_clockwise_sec_png.c  ui_img_daily_mission_png.c  ui_img_flash_png.c  ui_img_sec_dot_png.c  ui_img_step_png.c  ui_img_weather_png.c  ui_img_weather_sun_cloud_png.c
SquareLine_Project/: ui_Screen1.c  (+9 more)
(+153 files in other folders)
