SET(SOURCES ui_Screen1.c
    ui_Screen2.c
    ui_Screen3.c
    ui_Screen4.c
    ui_Screen5.c
    ui_Screen6.c
    ui_Screen7.c
    ui_Screen8.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_home_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_arrow_back_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_arrow_forward_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_wifi_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_settings_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_menu_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_light_mode_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_info_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_alarm_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_timer_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_bluetooth_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c
    ui_img_stadia_controller_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c)

add_library(ui ${SOURCES})
